<resources>
    <string name="app_name">Rhea-demo</string>
    <string name="action_settings">Settings</string>
    <string name="text_tts_source">宁波天坦智慧电子科技股份有限公司是一家专门致力于面向视障人士的无障碍信息系统研发与运维的科技公司，公司业务涵盖智能设备研发、智能软件系统设计以及软件平台运维等，2014年初成立于宁波高新区研发园，注册资本600万元。公司始终坚持“以技术创新实现产品价值”的理念，鼓励员工进行产品与技术创新，目前已经获得多项自主知识产权。天坦人时刻秉承“光明，责任，使命”的经营理念，立志为全球视力障碍人士提供全方位的互联网信息无障碍服务，公司愿景：以信息技术彻底改变视障人士的生活方式。</string>
    <string name="about_me">\@我的</string>
    <string name="comment">评论</string>
    <string name="write_weibo">写微博</string>
    <string name="home_page">首页</string>
    <string name="message">消息</string>
    <string name="find">发现</string>
    <string name="me">我</string>
    <string name="search_weibo">搜索微博</string>
    <string name="search_user">搜索用户</string>
    <string name="my_home_page">我的主页</string>
    <string name="follow">关注</string>
    <string name="fans">粉丝</string>
    <string name="collection">收藏</string>
    <string name="cancellation">退出账号</string>
    <string name="voice_input_button">语音输入。按钮</string>
    <string name="aall_button">"@。按钮"</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="text_begin">正在录音</string>
    <string name="send_button">发送。按钮</string>
    <string name="comments_null">""</string>
    <string name="login">"登录"</string>
    <string name="register">"注册"</string>
    <string name="friends">关注:</string>
    <string name="followers">粉丝:</string>
    <string name="location">所在地:</string>
    <string name="company">公司:</string>
    <string name="verified">微博认证:</string>
    <string name="edit_box_hint">请输入您要搜索的内容</string>
    <string name="contact">联系人</string>
    <string name="search">分享</string>
    <string name="reply">回复</string>
    <string name="all_comment">查看所有评论</string>
    <string name="write_comment">写评论</string>
    <string name="get_into_weibo_home">进入博主主页</string>
    <string name="follow_blogger">关注该博主</string>
    <string name="cancel_follow">取消关注</string>
    <string name="forward">转发</string>
    <string name="link">网页链接</string>
    <string name="full_text">全文</string>

</resources>
