<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="#fff"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_marginLeft="20dp"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13.5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:paddingStart="0dp"
            android:text="@string/friends"
            android:textColor="#fff"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <TextView
            android:id="@+id/followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="0dp"
            android:paddingStart="20dp"
            android:text="@string/followers"
            android:textColor="#fff"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/verified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13.5dp"
        android:paddingEnd="0dp"
        android:paddingStart="45dp"
        android:text="@string/verified"
        android:textColor="#fff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3.5dp"
        android:paddingEnd="0dp"
        android:paddingStart="45dp"
        android:text="@string/location"
        android:textColor="#fff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3.5dp"
        android:paddingEnd="0dp"
        android:paddingStart="45dp"
        android:text="@string/company"
        android:textColor="#fff"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="22dp"
        android:background="@color/white" />

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/home_page_listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>