<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBottomDark"
    android:orientation="vertical">


    <TextView
        android:id="@+id/reply"
        android:layout_width="fill_parent"
        android:layout_height="59dp"
        android:gravity="center_vertical"
        android:paddingLeft="17dp"
        android:text="@string/reply"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="17dp"
        android:background="@color/white" />


    <LinearLayout
        android:id="@+id/layout_forward"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:background="@color/colorBottomDark"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:gravity="center_vertical"
            android:paddingLeft="17dp"
            android:text="@string/forward"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forward_num"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/line6"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="17dp"
        android:background="@color/white" />

    <TextView
        android:id="@+id/write_comment"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingLeft="17dp"
        android:text="@string/write_comment"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/lin5"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="17dp"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/layout_comment"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:background="@color/colorBottomDark"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:gravity="center_vertical"
            android:paddingLeft="17dp"
            android:text="@string/comment"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/comment_num"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/line5"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="17dp"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/layout_all_comment"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:background="@color/colorBottomDark"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/all_comment"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:gravity="center_vertical"
            android:paddingLeft="17dp"
            android:text="@string/all_comment"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/all_comment_num"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:text=""
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="17dp"
        android:background="@color/white" />

    <TextView
        android:id="@+id/collection"
        android:layout_width="fill_parent"
        android:layout_height="59dp"
        android:gravity="center_vertical"
        android:paddingLeft="17dp"
        android:text="@string/collection"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/line4"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="17dp"
        android:background="@color/white" />

    <TextView
        android:id="@+id/my_weibo_home"
        android:layout_width="fill_parent"
        android:layout_height="59dp"
        android:gravity="center_vertical"
        android:paddingLeft="17dp"
        android:text="@string/get_into_weibo_home"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="17dp"
        android:background="@color/white" />

    <View
        android:id="@+id/line3"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="17dp"
        android:background="@color/white" />
</LinearLayout>
