<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60.5dp"
    android:background="@color/colorBottomDark"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/id_tab_home"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/id_tab_home_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:src="@mipmap/icon_home_page" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_page"
            android:textSize="16sp"
            android:textColor="@color/white" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="60.5dp"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/id_tab_message"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/id_tab_message_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:src="@mipmap/icon_message" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textSize="16sp"
            android:textColor="@color/white" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="60.5dp"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/id_tab_search"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/id_tab_search_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:src="@mipmap/icon_search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find"
            android:textSize="16sp"
            android:textColor="@color/white" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="60.5dp"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/id_tab_me"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/id_tab_me_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:src="@mipmap/icon_about_me" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/me"
            android:textSize="16sp"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>