<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBottomDark"
    android:orientation="vertical">

    <EditText
        android:id="@+id/comments_content"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_margin="5dp"
        android:background="@drawable/home_page_shape"
        android:gravity="top"
        android:hint="说说分享心得"
        android:paddingLeft="8dp"
        android:paddingTop="5dp"
        android:textColor="@color/white"
        android:textColorHint="#ffffff"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:focusable="true"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/comments_voice_input"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/home_page_shape"
            android:contentDescription="@string/voice_input_button"
            android:focusable="true">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:background="@drawable/icon_voice" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/comments_fenxiang"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/home_page_shape"
            android:contentDescription="@string/aall_button"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text=" @ "
                android:textColor="@color/white"
                android:textSize="25sp" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/comments_send"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/weibo_send"
        android:clickable="true"
        android:contentDescription="@string/send_button"
        android:focusable="true" />

    <LinearLayout
        android:id="@+id/forward_comment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:button="@drawable/checkbox_selector"
            android:paddingLeft="10dp"
            android:text="转发并评论"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>
